--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@emotion/react": "^11.11.0",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-reveal": "^1.2.2",
     "react-slick": "^0.29.0",
     "sass": "^1.54.5",
     "slick-carousel": "^1.8.1"
